# OSLab

./: CMakeLists.txt  README.md
Tests/: fifo_test1.c  fifo_test2.c
documents/lab3/: 211_Савков_Лаб3.docx
lab1/: child.c  child1.c  child2.c  file1.txt  file2.txt  input2.txt  lab1.c  parent.c
lab2/: file.txt  functions.h  generator_rand_corrds.c  parent.c
lab3/: child.c  file1.txt  file2.txt  parent.c  pool.h
lab4/: allocator_freelist.c  allocator_mkk.c  main.c  main.cpp
lab4/headers/: allocator_list.h  allocator_mkk.h
lab4/libs/: allocator_list.cpp  allocator_mkk.cpp
tests/: fifo_test1.c
